# openapi/openapi.yaml
@@ -2179,8 +2179,17 @@ components:
     ReviewStatus:
       type: string
       enum:
+        - DRAFT
         - UPLOADED
+        - ANALYSIS_REQUESTED
+        - EXTRACTING
+        - ANALYZING
+        - CHECK_REQUIRED
+        - REVIEW_COMPLETED
+        - REVIEW_FAILED
         - REVISED
+        - COMPARED
+        - REPORT_CREATED
       title: ReviewStatus
     Role:
       type: string
